Exercicio aula 3 - Back-End Awari

--- a/1-primeiro-projeto/index.html
+++ b/1-primeiro-projeto/index.html
@@ -4,11 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Awari - Primeira Aula</title>
-    <script  async src="./index.js"  ></script>
-    
+    <script  async src="./script.js"  ></script>
+    <style> #result{ 
+        font-size: 50px;
+    }</style>
 </head>
 <body>
-    <button id="BtnClickAq">Clique Aqui</button>
- 
+
+    <H1>digite uma soma</H1>
+    <label for="sum">Digite o primeiro numero </label>
+    <input type="number" id = "n1"> 
+    <p>+</p>
+    <label for="sum">Digite o Segundo numero </label>
+    <input type="number" id="n2" >
+    <div><button id="btnClickAq">Clique Aqui</button></div>
+    <p>RESULTADO</p>
+    <p id="result"></p>
 </body>
 </html>
